--- a/src/index.html
+++ b/src/index.html
@@ -148,7 +148,6 @@
                         <a href="#" class="swiper-slide__link">Подробнее</a>
                      </div>
                   </div>
-
                </div>
                <div class="swiper-button-next">
                   <svg width="10" height="18" viewBox="0 0 251 444" xmlns="http://www.w3.org/2000/svg">
@@ -326,6 +325,58 @@
          </div>
       </div>
       <div class="catalog__container">
+         <div class="slider-catalog">
+            <div class="swiper catalogSwiper">
+               <div class="swiper-wrapper catalogSwiper-wrapper">
+                  <a class="swiper-slide catalogSwiper-slide catalog__link">
+                     Молочные продукты
+                  </a>
+                  <a class="swiper-slide catalogSwiper-slide catalog__link">
+                     Бакалея
+                  </a>
+                  <a class="swiper-slide catalogSwiper-slide catalog__link">
+                     Мясо, птица
+                  </a>
+                  <a class="swiper-slide catalogSwiper-slide catalog__link">
+                     Детям
+                  </a>
+                  <a class="swiper-slide catalogSwiper-slide catalog__link">
+                     Овощи и фрукты
+                  </a>
+               </div>
+               <div class="swiper-button-next catalogSwiper-button-next">
+                  <svg width="10" height="18" viewBox="0 0 251 444" xmlns="http://www.w3.org/2000/svg">
+                     <g clip-path="url(#clip0_14_2)">
+                        <path
+                           d="M241.2 209.6L36.4 4.8C29.6 -1.7 18.8 -1.6 12.3 5.2C5.90002 11.8 5.90002 22.3 12.3 28.9L205 221.7L12.3 414.4C5.60002 421.1 5.60002 431.9 12.3 438.5C19 445.2 29.8 445.2 36.4 438.5L241.2 233.7C247.9 227.1 247.9 216.3 241.2 209.6Z"
+                           fill="#27300F" />
+                     </g>
+                     <defs>
+                        <clipPath id="clip0_14_2">
+                           <rect width="251" height="443.5" fill="white" />
+                        </clipPath>
+                     </defs>
+                  </svg>
+               </div>
+               <div class="swiper-button-prev catalogSwiper-button-prev">
+                  <svg width="10" height="18" viewBox="0 0 251 444" xmlns="http://www.w3.org/2000/svg">
+                     <g clip-path="url(#clip0_14_6)">
+                        <path
+                           d="M12.3 233.9L217.1 438.7C223.9 445.2 234.7 445.1 241.2 438.3C247.6 431.7 247.6 421.2 241.2 414.6L48.5 221.9L241.2 29.1C247.9 22.4 247.9 11.6 241.2 5.00001C234.5 -1.69999 223.7 -1.69999 217.1 5.00001L12.3 209.8C5.60002 216.5 5.60002 227.3 12.3 233.9Z"
+                           fill="#27300F" />
+                     </g>
+                     <defs>
+                        <clipPath id="clip0_14_6">
+                           <rect width="251" height="443.5" fill="white" />
+                        </clipPath>
+                     </defs>
+                  </svg>
+               </div>
+               <div class="swiper-pagination"></div>
+            </div>
+         </div>
+
+
          <ul class="catalog__list">
             <li class="catalog__item">
                <a href="#" class="catalog__link">Молочные продукты</a>
@@ -546,106 +597,106 @@
          </div>
       </div>
    </section>
-   <div class="footer">
-      <section class="contact">
-         <div class="container">
-            <div class="contact-box">
-               <div class="contact-box__connection">
-                  <h1 class="title title_block">
-                     Не смогли
-                     <span class="title__span">определиться?</span>
-                  </h1>
-                  <div class="contact-box__text text-media">
-                     <p class="description description_size-s contact-box__description">
-                        Если у вас остались вопросы, вы можете задать отправить нам ваши данные. Наши менеджеры свяжутся
-                        с
-                        вами в течении рабочего дня.
-                     </p>
-                     <ul class="contact-box__list">
-                        <li class="contact-box__item">
-                           <a href="tel:+79453425555" class="contact-box__info">+7 945 342 55 55</a>
-                        </li>
-                        <li class="contact-box__item">
-                           <a href="mailto:healthlyfood@mail.ru" class="contact-box__info">healthlyfood@mail.ru</a>
-                        </li>
-                     </ul>
-                  </div>
-               </div>
-               <div class="contact-box__form">
-                  <div class="card">
-                     <h3 class="card__title">Свяжитесь с нами</h3>
-                     <form class="card__form">
-                        <label class="card__label">Ваше имя</label>
-                        <input class="card__input" type="text" placeholder="Ваше имя">
-                        <label class="card__label">Ваш телефон</label>
-                        <input class="card__input" type="tel" placeholder="Ваш телефон">
-                        <button class="link card__link" type="submit">заказать звонок</button>
-                        <p class="card__check">Нажимая на кнопку вы подтверждаете свое согласие на обработку <a href="#"
-                              class="card__doc">персональных данных.</a></p>
-                     </form>
-                  </div>
-               </div>
-            </div>
-         </div>
-      </section>
-      <footer>
-         <div class="container">
-            <div class="footer__box">
-               <div class="footer__wrapper1">
-                  <a href="#" class="logo logo_max"></a>
-                  <ul class="footer__list">
-                     <li class="footer__item">
-                        <a href="#" class="footer__link">Наша продукция</a>
-                     </li>
-                     <li class="footer__item">
-                        <a href="#" class="footer__link">Новинки</a>
-                     </li>
-                     <li class="footer__item">
-                        <a href="#" class="footer__link">Доставка</a>
-                     </li>
-                  </ul>
-               </div>
-               <div class="footer__wrapper2">
-                  <ul class="footer__list">
-                     <li class="footer__item">
-                        Москва , ул.&nbsp;Ленинградская&nbsp;64
-                     </li>
-                     <li class="footer__item">
-                        пн-пт с&nbsp;09:00 до&nbsp;21:00
-                     </li>
-                     <li class="footer__item">
-                        сб-вс с&nbsp;09:00 до&nbsp;19:00
-                     </li>
-                  </ul>
-                  <div class="footer__contact">
-                     <a href="tel:+79453425555" class="footer__tel">+7 945 342 55 55</a>
-                     <a href="mailto:healthlyfood@mail.ru" class="footer__tel">e-mail: healthlyfood@mail.ru</a>
-                     <ul class="footer-social">
-                        <li class="footer-social__item">
-                           <a href="#" target="_blank" class="footer-social__link footer-social__vk"></a>
-                        </li>
-                        <li class="footer-social__item">
-                           <a href="#" target="_blank" class="footer-social__link footer-social__inst"></a>
-                        </li>
-                        <li class="footer-social__item">
-                           <a href="#" target="_blank" class="footer-social__link footer-social__fb"></a>
-                        </li>
-                     </ul>
-                  </div>
-               </div>
 
+   <section class="contact">
+      <div class="container">
+         <div class="contact-box">
+            <div class="contact-box__connection">
+               <h1 class="title title_block">
+                  Не смогли
+                  <span class="title__span">определиться?</span>
+               </h1>
+               <div class="contact-box__text text-media">
+                  <p class="description description_size-s contact-box__description">
+                     Если у вас остались вопросы, вы можете задать отправить нам ваши данные. Наши менеджеры свяжутся
+                     с
+                     вами в течении рабочего дня.
+                  </p>
+                  <ul class="contact-box__list">
+                     <li class="contact-box__item">
+                        <a href="tel:+79453425555" class="contact-box__info">+7 945 342 55 55</a>
+                     </li>
+                     <li class="contact-box__item">
+                        <a href="mailto:healthlyfood@mail.ru" class="contact-box__info">healthlyfood@mail.ru</a>
+                     </li>
+                  </ul>
+               </div>
             </div>
-            <div class="footer__text">
-               <p class="footer__copy">
-                  &copy; 2020, Все права защищены
-               </p>
-               <p class="footer__author">
-                  Сделано в рамках курса учебной платформы <a href="#" class="footer__course">Frontend Blok</a>
-               </p>
+            <div class="contact-box__form">
+               <div class="card">
+                  <h3 class="card__title">Свяжитесь с нами</h3>
+                  <form class="card__form">
+                     <label class="card__label">Ваше имя</label>
+                     <input class="card__input" type="text" placeholder="Ваше имя">
+                     <label class="card__label">Ваш телефон</label>
+                     <input class="card__input" type="tel" placeholder="Ваш телефон">
+                     <button class="link card__link" type="submit">заказать звонок</button>
+                     <p class="card__check">Нажимая на кнопку вы подтверждаете свое согласие на обработку <a href="#"
+                           class="card__doc">персональных данных.</a></p>
+                  </form>
+               </div>
             </div>
          </div>
-      </footer>
-   </div>
+      </div>
+   </section>
+   <footer>
+      <div class="container">
+         <div class="footer__box">
+            <div class="footer__wrapper1">
+               <a href="#" class="logo logo_max"></a>
+               <ul class="footer__list">
+                  <li class="footer__item">
+                     <a href="#" class="footer__link">Наша продукция</a>
+                  </li>
+                  <li class="footer__item">
+                     <a href="#" class="footer__link">Новинки</a>
+                  </li>
+                  <li class="footer__item">
+                     <a href="#" class="footer__link">Доставка</a>
+                  </li>
+               </ul>
+            </div>
+            <div class="footer__wrapper2">
+               <ul class="footer__list">
+                  <li class="footer__item">
+                     Москва , ул.&nbsp;Ленинградская&nbsp;64
+                  </li>
+                  <li class="footer__item">
+                     пн-пт с&nbsp;09:00 до&nbsp;21:00
+                  </li>
+                  <li class="footer__item">
+                     сб-вс с&nbsp;09:00 до&nbsp;19:00
+                  </li>
+               </ul>
+               <div class="footer__contact">
+                  <a href="tel:+79453425555" class="footer__tel">+7 945 342 55 55</a>
+                  <a href="mailto:healthlyfood@mail.ru" class="footer__tel">e-mail: healthlyfood@mail.ru</a>
+                  <ul class="footer-social">
+                     <li class="footer-social__item">
+                        <a href="#" target="_blank" class="footer-social__link footer-social__vk"></a>
+                     </li>
+                     <li class="footer-social__item">
+                        <a href="#" target="_blank" class="footer-social__link footer-social__inst"></a>
+                     </li>
+                     <li class="footer-social__item">
+                        <a href="#" target="_blank" class="footer-social__link footer-social__fb"></a>
+                     </li>
+                  </ul>
+               </div>
+            </div>
+
+         </div>
+         <div class="footer__text">
+            <p class="footer__copy">
+               &copy; 2020, Все права защищены
+            </p>
+            <p class="footer__author">
+               Сделано в рамках курса учебной платформы <a href="#" class="footer__course">Frontend Blok</a>
+            </p>
+         </div>
+      </div>
+   </footer>
+
 
 </body>
 
