--- a/src/index.html
+++ b/src/index.html
@@ -328,19 +328,19 @@
          <div class="slider-catalog">
             <div class="swiper catalogSwiper">
                <div class="swiper-wrapper catalogSwiper-wrapper">
-                  <a class="swiper-slide catalogSwiper-slide catalog__link">
+                  <a href="#" class="swiper-slide catalogSwiper-slide catalog__link">
                      Молочные продукты
                   </a>
-                  <a class="swiper-slide catalogSwiper-slide catalog__link">
+                  <a href="#" class="swiper-slide catalogSwiper-slide catalog__link">
                      Бакалея
                   </a>
-                  <a class="swiper-slide catalogSwiper-slide catalog__link">
+                  <a href="#" class="swiper-slide catalogSwiper-slide catalog__link">
                      Мясо, птица
                   </a>
-                  <a class="swiper-slide catalogSwiper-slide catalog__link">
+                  <a href="#" class="swiper-slide catalogSwiper-slide catalog__link">
                      Детям
                   </a>
-                  <a class="swiper-slide catalogSwiper-slide catalog__link">
+                  <a href="#" class="swiper-slide catalogSwiper-slide catalog__link">
                      Овощи и фрукты
                   </a>
                </div>
